채팅 페이지 오류 수정

--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	
+
+	// WebSocket 추가
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
+
+
 
 // tasks.named('test') {
 // 	useJUnitPlatform()
