--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# MongoDB Atlas ?? (???? ??)
+spring.data.mongodb.uri=mongodb+srv://<cheayi>:<081025>@goodspick.hsibams.mongodb.net/?appName=goodspick
+
+# WebSocket ??
+spring.websocket.allowed-origins=*
